app/kibana-envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    listener_filters:
    - name: "envoy.filters.listener.tls_inspector"
      typed_config: {}
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { filename: "/etc/envoy/ssl/server.crt" }
              private_key: { filename: "/etc/envoy/ssl/server.key" }
      filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            codec_type: auto
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_https
            server_name: "***"
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains:
                  - "*"
                routes:
                - match:
                    prefix: "/envoy/healthz"
                  direct_response:
                    status: 200
                    body:
                      inline_string: "Kibana Proxy is UP"
                - match:
                    prefix: "/_plugin/kibana"
                  route:
                    timeout: 30s
                    cluster: els_proxy
                - match:
                    prefix: "/"
                  route:
                    prefix_rewrite: "/_plugin/kibana"
                    timeout: 30s
                    cluster: els_proxy
            http_filters:
              - name: envoy.router
            use_remote_address: true
            skip_xff_append: false
            stat_prefix: "kibana_proxy"
            access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: "/dev/stdout"
  clusters:
  - name: els_proxy
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: els_proxy
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: __ELS_PROXY_HOST
                    port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: __ELS_PROXY_HOST
